# LLVM-Weighted-Instruction-Frequency-Pass

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md
archive/old_weighted_inst_freq_backup/: CMakeLists.txt  README.md  optimization_comparison.csv  summary.txt
archive/old_weighted_inst_freq_backup/optional_visualizer/: visualize.py
archive/old_weighted_inst_freq_backup/weighted-inst-freq-frontend/weighted-inst-freq/frontend/: package.json
dashboard/: README.md
dashboard/public/: results.csv  test_basic_optimization_comparison_delta.csv  test_basic_results.csv  test_basic_summary.json  test_loops_optimization_comparison_delta.csv  test_loops_results.csv  test_loops_summary.json  test_matrix_optimization_comparison_delta.csv  test_matrix_results.csv  test_matrix_summary.json  test_memory_optimization_comparison_delta.csv  test_memory_results.csv  test_memory_summary.json  test_optimization_comparison_delta.csv  test_recursion_optimization_comparison_delta.csv  test_recursion_results.csv  test_recursion_summary.json  test_summary.json
dashboard/src/: App.jsx  styles.css
dashboard/src/components/: CategoryPieChart.jsx  Header.jsx  IRInsightPanel.jsx  KPICards.jsx  LoopHotspotPanel.jsx
dashboard/src/utils/: analysis.js
demo/: demo_video_link.txt
optional_visualizer/: visualize.py
scripts/: build.sh  clean.sh  generate_reports.py  run.sh  run_all.sh
testcases/: test.c  test_basic.c  test_invalid.c  test_loops.c  test_matrix.c  test_memory.c  test_recursion.c
weighted-inst-freq/: .gitignore  WeightedInstFreq.cpp  results_O2.csv  run.sh  summary.json
weighted-inst-freq/optional_visualizer/: README.md
weighted-inst-freq/weighted-inst-freq-frontend/weighted-inst-freq/frontend/: index.html  package-lock.json
weighted-inst-freq/weighted-inst-freq-frontend/weighted-inst-freq/frontend/public/: weights.cfg
weighted-inst-freq/weighted-inst-freq-frontend/weighted-inst-freq/frontend/src/components/: BasicBlockTable.jsx  Filters.jsx  FunctionCostChart.jsx  HotspotTable.jsx  SeverityDistributionChart.jsx  SuggestionsPanel.jsx
(+6 files in other folders)
